docs/vocabulary-fulltable/_sources/type/Polygon/v1/index.rst.txt
:orphan:

Polygon (v1)
============

.. warning::
   This is not the latest version. The latest version is :doc:`v5 <../v5/index>`.

**Previous Version:** none *(this is the oldest version)*

**URI:** `http://clams.ai/vocabulary/type/Polygon/v1 <http://clams.ai/vocabulary/type/Polygon/v1>`_

**Shortname:** ``Polygon``

**Inherits from:** :doc:`Region (v1) <../../Region/v1/index>`

**Included in vocabulary versions:** :doc:`1.0.0 <../../../1.0.0/index>`, :doc:`1.0.1 <../../../1.0.1/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/Polygon/v1 <http://mmif.clams.ai/vocabulary/Polygon/v1>`_
- `http://mmif.clams.ai/0.4.0/vocabulary/Polygon/ <http://mmif.clams.ai/0.4.0/vocabulary/Polygon/>`_
- `http://mmif.clams.ai/0.4.1/vocabulary/Polygon/ <http://mmif.clams.ai/0.4.1/vocabulary/Polygon/>`_
- `http://mmif.clams.ai/0.4.2/vocabulary/Polygon/ <http://mmif.clams.ai/0.4.2/vocabulary/Polygon/>`_


Description
-----------

A polygon in an image or video. This is a two-dimensional object so if this occurs in a video it will be anchored to a particular frame or time point in the video.


Properties
----------

*Properties marked with* **\*** *are required.*


.. list-table::
   :header-rows: 1
   :widths: 15 10 75

   * - Property
     - Type
     - Description
   * - ``coordinates`` **\***
     - array of array
     - The coordinates of the polygon, taking the top-left of the image as the origin (0,0). Unit used to measure the distance is the number of pixels.
   * - ``timePoint``
     - integer
     - If on a video stream, the TimePoint that the BoundingBox occurs in.

*Inherited from* :doc:`Region (v1) <../../Region/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``timeUnit``
     - string
     - Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.

*Inherited from* :doc:`Annotation (v2) <../../Annotation/v2/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``document``
     - string
     - The identifier of the document that the annotation is over.

*Inherited from* :doc:`Thing (v1) <../../Thing/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``id`` **\***
     - string
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       },
       "coordinates": {
         "description": "The coordinates of the polygon, taking the top-left of the image as the origin (0,0). Unit used to measure the distance is the number of pixels.",
         "items": {
           "items": {
             "type": "integer"
           },
           "type": "array"
         },
         "type": "array"
       },
       "timePoint": {
         "type": "integer",
         "description": "If on a video stream, the TimePoint that the BoundingBox occurs in."
       }
     },
     "required": [
       "coordinates",
       "id"
     ],
     "type": "object"
   }