docs/vocabulary-fulltable/_sources/type/Polygon/v2/index.rst.txt
:orphan:

Polygon (v2)
============

.. warning::
   This is not the latest version. The latest version is :doc:`v5 <../v5/index>`.

**Previous Version:** :doc:`v1 <../v1/index>`

**URI:** `http://clams.ai/vocabulary/type/Polygon/v2 <http://clams.ai/vocabulary/type/Polygon/v2>`_

**Shortname:** ``Polygon``

**Inherits from:** :doc:`Region (v2) <../../Region/v2/index>`

**Included in vocabulary versions:** :doc:`1.0.2 <../../../1.0.2/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/Polygon/v2 <http://mmif.clams.ai/vocabulary/Polygon/v2>`_


Description
-----------

A polygon in an image or video. This is a two-dimensional object so if this occurs in a video it will be anchored to a particular frame or time point in the video.


Properties
----------

*Properties marked with* **\*** *are required.*


.. list-table::
   :header-rows: 1
   :widths: 15 10 75

   * - Property
     - Type
     - Description
   * - ``coordinates`` **\***
     - array of array
     - The coordinates of the polygon, taking the top-left of the image as the origin (0,0). Unit used to measure the distance is the number of pixels.
   * - ``timePoint``
     - integer
     - If on a video stream, the TimePoint that the BoundingBox occurs in.

*Inherited from* :doc:`Region (v2) <../../Region/v2/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``timeUnit``
     - string
     - Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.

*Inherited from* :doc:`Annotation (v3) <../../Annotation/v3/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``classifications``
     - object
     - A map from label values to their "score" numbers provided by a classifier. The score can be probability, similarity, confidence, or any other real number that was used to determine the label value.

       *Optional* on top of the ``label`` property. However when this property is used, the ``label`` property must be one of the keys and the keys must match to the values defined in the ``labelset`` or ``labelsetUri`` annotation metadata.
   * - ``document``
     - string
     - The identifier of the document that the annotation is over.
   * - ``label``
     - string
     - A label given to this object by a classifier. The value must be a simple string value of the label and must be one of the values defined in the ``labelset`` or ``labelsetUri`` annotation metadata.

       .. note::

          Annotations from a classifier app must have this property.
   * - ``labelset``
     - array of string
     - When an annotation object contains results of a classification task, this metadata is used to specify the label values used in classification. Individual annotations then must have ``label`` property that is one of the values in this list.

       .. note::

          Annotations from a classifier app must have this metadata or ``labelsetUri`` metadata.

       .. note::

          Not all of labels specified in the ``labelset`` must occur in the output annotations. For example, a ``labelset`` can contain a *catch-all* negative label, but if the negative label can be not interesting enough to keep in the output annotation.
   * - ``labelsetUri``
     - string
     - A URI to an externally defined labelset. Since the ``labelset`` metadata is a list of simple strings, this URI can be used to point to a more detailed definition of the labelset. This can be a JSON-LD document or a SKOS concept scheme, for example.

       .. note::

          Annotations from a classifier app must have this metadata or ``labelset`` metadata.

*Inherited from* :doc:`Thing (v1) <../../Thing/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``id`` **\***
     - string
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "labelset": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "When an annotation object contains results of a classification task, this metadata is used to specify the label values used in classification. Individual annotations then must have <code>label</code> property that is one of the values in this list. <br><br> [note] Annotations from a classifier app must have this metadata or <code> labelsetUri </code> metadata. [/note]<br><br> [note] Not all of labels specified in the <code>labelset</code> must occur in the output annotations. For example, a <code>labelset</code> can contain a <i>catch-all</i> negative label, but if the negative label can be not interesting enough to keep in the output annotation. [/note]"
       },
       "labelsetUri": {
         "type": "string",
         "description": "A URI to an externally defined labelset. Since the <code>labelset</code> metadata is a list of simple strings, this URI can be used to point to a more detailed definition of the labelset. This can be a JSON-LD document or a SKOS concept scheme, for example. <br><br> [note] Annotations from a classifier app must have this metadata or <code> labelset </code> metadata. [/note]"
       },
       "label": {
         "type": "string",
         "description": "A label given to this object by a classifier. The value must be a simple string value of the label and must be one of the values defined in the <code>labelset</code> or <code>labelsetUri</code> annotation metadata. <br><br> [note] Annotations from a classifier app must have this property. [/note]"
       },
       "classifications": {
         "additionalProperties": {
           "type": "number"
         },
         "type": "object",
         "description": "A map from label values to their \"score\" numbers provided by a classifier. The score can be probability, similarity, confidence, or any other real number that was used to determine the label value. <br><br> <i>Optional</i> on top of the <code>label</code> property. However when this property is used, the <code>label</code> property must be one of the keys and the keys must match to the values defined in the <code>labelset</code> or <code>labelsetUri</code> annotation metadata."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       },
       "coordinates": {
         "description": "The coordinates of the polygon, taking the top-left of the image as the origin (0,0). Unit used to measure the distance is the number of pixels.",
         "items": {
           "items": {
             "type": "integer"
           },
           "type": "array"
         },
         "type": "array"
       },
       "timePoint": {
         "type": "integer",
         "description": "If on a video stream, the TimePoint that the BoundingBox occurs in."
       }
     },
     "required": [
       "coordinates",
       "id"
     ],
     "type": "object"
   }